# prunr

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  test_cli.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.jules/: bolt.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-workspace-scaffolding/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-core-inference-engine/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  02-06-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-cli-binary/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-VERIFICATION.md
.planning/phases/04-gui-foundation/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-CONTEXT.md  04-RESEARCH.md  04-UI-SPEC.md  04-VALIDATION.md
.planning/phases/05-gui-feature-completeness/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-UI-SPEC.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/07-iterative-processing/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-CONTEXT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
assets/: Info.plist  prunr.desktop
crates/bgprunr-app/: Cargo.toml
crates/bgprunr-app/src/: cli.rs  main.rs
crates/bgprunr-app/src/gui/: app.rs  mod.rs  settings.rs  state.rs  theme.rs  worker.rs
crates/bgprunr-app/src/gui/tests/: anim_tests.rs  batch_tests.rs  clipboard_tests.rs  input_tests.rs  mod.rs  settings_tests.rs  state_tests.rs  zoom_pan_tests.rs
crates/bgprunr-app/src/gui/views/: animation.rs  canvas.rs  mod.rs  settings.rs  shortcuts.rs  sidebar.rs  statusbar.rs  toolbar.rs
crates/bgprunr-core/: Cargo.toml
crates/bgprunr-core/src/: batch.rs  engine.rs  lib.rs  pipeline.rs  postprocess.rs  preprocess.rs  types.rs
crates/bgprunr-core/tests/: reference_test.rs
crates/bgprunr-models/: Cargo.toml
crates/bgprunr-models/src/: lib.rs
crates/prunr-app/: Cargo.toml  build.rs
crates/prunr-app/src/: cli.rs  fs_util.rs  hardware.rs  lib.rs  main.rs  ort_runtime.rs  runtime_install.rs  worker_process.rs
crates/prunr-app/src/gui/: animation_sweep.rs  app.rs  background_io.rs  batch_manager.rs  brush_state.rs  download_manager.rs  drag_export.rs  drag_export_state.rs  env_overrides.rs  hardware_cache.rs  history_disk.rs  history_manager.rs  inpaint_bridge.rs  item.rs  item_settings.rs  knob_catalog.rs  live_preview.rs  memory.rs  mod.rs  presets.rs  presets_fs.rs  processor.rs  settings.rs  state.rs  status_state.rs  system_bridge.rs  theme.rs  toasts.rs  worker.rs  zoom_state.rs
crates/prunr-app/src/gui/tests/: anim_tests.rs  batch_tests.rs  clipboard_tests.rs  fixtures.rs  input_tests.rs  mod.rs  settings_tests.rs  state_tests.rs  zoom_pan_tests.rs
crates/prunr-app/src/gui/views/: adjustments_toolbar.rs  animation.rs  animation_sweep.rs  brush_chip.rs  brush_overlay.rs  canvas.rs  chip.rs  cli_help.rs  eraser_chip.rs  lines_popover.rs  mod.rs  model_store.rs  pipeline_flow.rs  preset_dropdown.rs  runtime_prompt.rs  settings.rs  shortcuts.rs  sidebar.rs  statusbar.rs  toolbar.rs
crates/prunr-app/src/subprocess/: ipc.rs  manager.rs  mod.rs  protocol.rs
crates/prunr-app/tests/: feature_cli_matrix.rs
crates/prunr-core/: Cargo.toml
crates/prunr-core/benches/: guided_filter.rs  resize_lanczos3.rs  tensor_to_mask.rs  tile_compose.rs
crates/prunr-core/src/: batch.rs  brush.rs  cache.rs  edge.rs  engine.rs  ep_compat.rs  formats.rs  guided_filter.rs  inpaint.rs  inpaint_blend.rs  inpaint_sd.rs  lib.rs  math.rs  pipeline.rs  postprocess.rs  preprocess.rs  recipe.rs  types.rs
crates/prunr-core/tests/: big_lama_smoke.rs  feature_bg_effect.rs  feature_brush_correction.rs  feature_inpaint.rs  feature_line_mode.rs  golden_e2e.rs  golden_postprocess.rs  reference_test.rs  sd_inpaint_smoke.rs
crates/prunr-core/tests/golden_data/e2e/circle_silueta_e2e/: recipe.json
crates/prunr-core/tests/golden_data/postprocess/circle_silueta_basic/: sidecar.json
crates/prunr-core/tests/golden_data/postprocess/multi_subject_synth/: sidecar.json
crates/prunr-core/tests/test_common/: mod.rs
crates/prunr-models/: Cargo.toml
crates/prunr-models/src/: lib.rs
crates/prunr-runtime-install/: Cargo.toml
crates/prunr-runtime-install/src/: lib.rs
packaging/aur/: PKGBUILD
packaging/homebrew/: prunr.rb
scripts/: convert_models.py  export_big_lama.py  export_dexined.py  export_lcm_inpaint.py  export_migan.py  export_taesd.py  generate_references.py  patch_big_lama_dft.py
tests/references/: VERSIONS.txt
tests/test_images/: README.md
xtask/: Cargo.toml
xtask/src/: main.rs  models.rs
