[workspace]
members = [
    "crates/prunr-core",
    "crates/prunr-models",
    "crates/prunr-app",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.4.6"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/aktiwers/prunr"

[workspace.dependencies]
# Phase 1 — active
thiserror = "2.0"
include-bytes-zstd = { git = "https://github.com/daac-tools/include-bytes-zstd" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Phase 2+ — declared for consistent pinning, not used yet
ort = { version = "=2.0.0-rc.12", features = ["cuda", "coreml", "directml", "ndarray", "download-binaries"] }
ndarray = "0.17"
image = { version = "0.25", features = ["jpeg", "png", "webp", "bmp"] }
rayon = "1.11"
num_cpus = "1"
egui = "0.34"
eframe = { version = "0.34", default-features = true }
egui_extras = { version = "0.34", features = ["image"] }
clap = { version = "4.5", features = ["derive"] }
arboard = { version = "3.6", features = ["wayland-data-control"] }
resvg = "0.47"
indicatif = "0.17"
rfd = "0.15"
zstd = "0.13"
egui-notify = "0.22"
egui_material_icons = "0.6"
egui_animation = "0.11"
dirs = "6"
sysinfo = "0.37"
bincode = { version = "2", features = ["serde"] }
memory-stats = "1"

[profile.release]
strip = true
lto = "fat"
opt-level = 3
panic = "abort"
codegen-units = 1

[profile.dist]
inherits = "release"

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
allow-dirty = ["ci"]
installers = []
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
