[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }
serde_json = { workspace = true }
sha2 = "0.10"
hex = "0.4"
zstd = { workspace = true }
dirs = { workspace = true }
# `dev-models` keeps `include_bytes!` out so xtask can compile before the
# .zst files exist (xtask is the tool that produces them).
prunr-models = { path = "../crates/prunr-models", features = ["dev-models"] }
prunr-runtime-install = { path = "../crates/prunr-runtime-install" }

# Phase 19-02b probe — see `probe_load_dynamic` in src/main.rs.
# api-23: rc.12 vitis.rs build bug under load-dynamic at api-24.
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["load-dynamic", "ndarray", "api-23"] }
ndarray = { workspace = true }
# 19-09: extract OpenVINO ORT bundles from PyPI .whl files (zip archives).
zip = { version = "2", default-features = false, features = ["deflate"] }

# 20-04: read/write PNGs for the `render-golden-diff` subcommand.
image = { workspace = true }
