[package]
name = "bgprunr-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bgprunr"
path = "src/main.rs"

[lib]
name = "bgprunr_app"
path = "src/lib.rs"

[features]
# Enable runtime model loading from filesystem (for development without embedding ONNX files).
# Usage: cargo check -p bgprunr-app --features dev-models
dev-models = ["bgprunr-core/dev-models"]

[dependencies]
bgprunr-core = { path = "../bgprunr-core" }
clap = { workspace = true }
indicatif = { workspace = true }
egui = { workspace = true }
eframe = { workspace = true }
arboard = { workspace = true }
rfd = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }
