[package]
name = "prunr-app"
version.workspace = true
edition.workspace = true
repository = "https://github.com/aktiwers/prunr"

[[bin]]
name = "prunr"
path = "src/main.rs"

[lib]
name = "prunr_app"
path = "src/lib.rs"

[features]
# Enable runtime model loading from filesystem (for development without embedding ONNX files).
# Usage: cargo check -p prunr-app --features dev-models
dev-models = ["prunr-core/dev-models"]

[dependencies]
prunr-core = { path = "../prunr-core" }
prunr-models = { path = "../prunr-models" }
ort = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
egui = { workspace = true }
eframe = { workspace = true }
egui_extras = { workspace = true }
arboard = { workspace = true }
rfd = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }
egui-notify = { workspace = true }
egui_material_icons = { workspace = true }
egui_animation = { workspace = true }
dirs = { workspace = true }
zstd = { workspace = true }
bytemuck = { workspace = true }
sysinfo = { workspace = true }
bincode = { workspace = true }
memory-stats = { workspace = true }
ndarray = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Model Store on-demand downloads (Phase 17). Blocking client + rustls so we
# don't pull in OpenSSL on Linux.
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }
sha2 = "0.10"
hex = "0.4"
# 19-04 Runtime Store: extract OpenVINO wheels (.zip)
zip = { version = "2", default-features = false, features = ["deflate"] }
bytes = "1"

[dev-dependencies]
proptest = { workspace = true }

# OS drag-out: supported on Windows and macOS. On Linux the crate requires a
# GTK window (winit/eframe cannot supply one), and pulls in gtk/gdk native
# deps, so we exclude it entirely on Linux and show a fallback toast instead.
[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
drag = "2.1"

# Windows: attach to parent console when run from cmd/PowerShell so CLI output
# reaches the user. Paired with `#![windows_subsystem = "windows"]` in main.rs
# to suppress the empty console window on GUI launch.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }

[build-dependencies]
winresource = "0.1"
