[package]
name = "prunr-core"
version.workspace = true
edition.workspace = true

[features]
# Enable runtime model loading from filesystem (for development without embedding ONNX files).
# Activates prunr-models/dev-models which provides silueta_bytes()/u2net_bytes() functions
# instead of SILUETA_BYTES/U2NET_BYTES statics that require models at compile time.
# Usage: cargo test -p prunr-core --features dev-models
dev-models = ["prunr-models/dev-models"]

# CUDA execution provider (requires CUDA toolkit at link time)
cuda = []

[dependencies]
prunr-models = { path = "../prunr-models" }
thiserror = { workspace = true }
ort = { workspace = true }
ndarray = { workspace = true }
image = { workspace = true }
resvg = { workspace = true }
rayon = { workspace = true }
num_cpus = "1"
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
fast_image_resize = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rand_distr = { workspace = true }
half = { workspace = true }
instant-clip-tokenizer = "0.1"
sysinfo = { workspace = true }

[dev-dependencies]
prunr-models = { path = "../prunr-models", features = ["dev-models"] }
tracing-subscriber = { workspace = true }
# criterion: microbench harness for the perf-sensitive kernels in this
# crate. Benches are run manually (`cargo bench -p prunr-core`); CI
# does not invoke them — runner noise + wall-clock variance would
# produce false regressions. Reference numbers committed inline in
# ARCHITECTURE.md under "Postprocess fast paths".
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "guided_filter"
harness = false

[[bench]]
name = "tile_compose"
harness = false

[[bench]]
name = "resize_lanczos3"
harness = false

[[bench]]
name = "tensor_to_mask"
harness = false
