[package]
name = "prunr-runtime-install"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde_json = { workspace = true }
sha2 = "0.10"
hex = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
bytes = "1"
