[package]
name = "prunr-runtime-install"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reqwest = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
zip = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
